[project]
name = "pylogsentinel"
version = "0.3.2"
description = "Lightweight cron-friendly log monitoring utility with regex rules and per-rule shell actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Jan Tuomi", email = "jan@jantuomi.fi" }
]
keywords = ["log", "monitoring", "regex", "cron", "alerting", "sentinel"]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/jantuomi/pylogsentinel"
Repository = "https://github.com/jantuomi/pylogsentinel.git"
Issues = "https://github.com/jantuomi/pylogsentinel/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
